Save data if not exists already, in SQLite DB

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">SQLiteStorageOptionExample</string>
     <string name="submit">Submit</string>
     <string name="hint">Enter text to save</string>
+    <string name="listUserInputs">List User Inputs</string>
 
 </resources>
